# python-graph

./: .env.example  .gitignore  README.md  chat.py  graph.py  main.py  pyproject.toml  test-interface.py
grafos/: graph.gexf  graph.graphml  graph.html  graph.json  kg_analytic.gexf  kg_analytic.graphml  kg_analytic.pkl
grafos.old/: grafo.gexf  grafo_completo.html
kg/: __init__.py  communities.py  exporters.py  graph_builder.py  graph_runtime.py  llm_interface.py  metrics.py  queries.py
logs/: pipeline_discarded.json  pipeline_metrics.json  processados.json
logs-old/: processados.json
saida-old/: EFTA01262782_processado.md  EFTA01262791_processado.md  EFTA01262798_processado.md  EFTA01263148_processado.md  EFTA01263197_processado.md  EFTA01263213_processado.md  EFTA01263289_processado.md  EFTA01263330_processado.md  EFTA01264248_processado.md  EFTA01264411_processado.md  EFTA01265224_processado.md  EFTA01265245_processado.md  EFTA01265318_processado.md  EFTA01265450_processado.md  EFTA01265476_processado.md  EFTA01265483_processado.md  EFTA01265789_processado.md  EFTA01265807_processado.md  EFTA01265910_processado.md  EFTA01265962_processado.md  EFTA01265976_processado.md  EFTA01266017_processado.md  EFTA01266021_processado.md  EFTA01266080_processado.md  EFTA01266095_processado.md  EFTA01266114_processado.md  EFTA01266118_processado.md  EFTA01266120_processado.md  EFTA01266288_processado.md  EFTA01266298_processado.md  EFTA01266327_processado.md  EFTA01266354_processado.md  EFTA01266357_processado.md  EFTA01266457_processado.md  EFTA01266486_processado.md  (+1 more)
(+46 files in other folders)
