[project]
name = "convert-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "python-louvain>=0.16",
    "pyvis>=0.3.2",
    "scipy>=1.17.1",
]
